# qdrant-experiments

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start-jupyter-lab.sh
experiments/: 00.01-basic-vector-serarch.ipynb  00.02-project-vector-search.ipynb  01.01.semantic-movie-search.ipynb  01.02-semantic-search-engine.ipynb
