[project]
name = "qdrant-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "markitdown[pdf]>=0.1.6",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "transformers>=5.12.1",
]
